fixed text overflow issue on anime and tv show pages

--- a/client/src/WebApp/components/TopTvShowDetails/TopTvShowDetails.css
+++ b/client/src/WebApp/components/TopTvShowDetails/TopTvShowDetails.css
@@ -20,7 +20,7 @@
 
 .top-tv-show-details .top-tv-show-image {
     min-width: 100%;
-    height: 43rem;
+    height: 45rem;
     overflow: hidden;
     position: relative;
 }
@@ -38,7 +38,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 18rem;
+    height: 20rem;
     background: linear-gradient(180deg, #FFF 0%, rgba(0, 0, 0, 0.00) 0.01%, rgba(0, 0, 0, 0.00) 47.43%, rgba(0, 0, 0, 0.62) 72%, #000 100%);
 }
 
@@ -59,7 +59,8 @@
     gap: 1rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
+    flex-wrap: wrap;
 }
 
 .tv-show-stats>div {
